--- a/index.html
+++ b/index.html
@@ -2,15 +2,25 @@
 
 <html lang="en">
 <head>
+	<!-- Icons made by Freepik, Smashicons, Dave Gandy at www.flaticon.com -->
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>Jake Rogers - Portfolio</title>
+	<title>Jake Rogers | Developer + Designer </title>
 	<meta name="description" content="Jake Rogers Portfolio">
 	<meta name="author" content="Jake Rogers">
 
 	<link rel="stylesheet" type="text/css" href="./styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Oswald|Quattrocento+Sans" rel="stylesheet">
+
+	<!-- Favicons -->
+	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+	<link rel="manifest" href="./site.webmanifest">
+	<link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
 
 	<script
 	  src="http://code.jquery.com/jquery-3.3.1.min.js"
@@ -21,7 +31,7 @@
 
 </head>
 <body>
-
+	<!-- Full Screen Banner -->
 	<div class="banner">
 		<h1 class="header1">
 			Jake Rogers
@@ -29,9 +39,10 @@
 		<h2 class="header2">
 			Designer // Developer
 		</h2>
-		<a href="#"> Learn More </a>
+		<a href="#" class="learn-more"> Learn More </a>
 	</div>
 	
+	<!-- Nav Bar -->
 	<nav class="nav">
 	   <a href="#" id="home" class="nav-link-home"> Home </a>
 	   <a href="#" id="about" class="nav-link"> About </a>
@@ -46,7 +57,7 @@
 	 	<div class="about">
 	 		<h1 class="about-header"> - About - </h1>
 
-	 		<p class="about-writeup"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat </p>
+	 		<p class="about-writeup"> I am a designer and web developer from the Boston area. I am currently studying Computer Science at Wesleyan University. </p>
 
 	 		<div class="section-container"> 
 
@@ -83,15 +94,16 @@
 	 		<h1 class="projects-header"> - Projects - </h1>
  	
  			<div class="project-section">
+ 				<div class="project-photo">
+ 					<img src="./macbook-theory-trainer.png" />
+ 				</div>
  				<div class="project-words">
  					<h2 class="project-name"> Theory Trainer </h2>
  					<div class="horizontal-line"> </div>
  					<p class="project-writeup"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat </p>
- 					<a href="#" class="project-button"> Visit Website</a>
+ 					<a href="http://theorytrainer.com/#/" class="project-button"> Visit Website</a>
  				</div>
- 				<div class="project-photo">
- 					<img src="./macbook-image.png" />
- 				</div>
+ 			
  			</div>
 
  			<hr>
@@ -111,14 +123,14 @@
  			<hr>
 
  			<div class="project-section">
+ 				<div class="project-photo">
+ 					<img src="./macbook-image.png" />
+ 				</div>
  				<div class="project-words">
  					<h2 class="project-name"> Poetry Mashup </h2>
  					<div class="horizontal-line"> </div>
  					<p class="project-writeup"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat </p>
  					<a href="#" class="project-button"> Visit Website</a>
- 				</div>
- 				<div class="project-photo">
- 					<img src="./macbook-image.png" />
  				</div>
  			</div>
 
@@ -126,7 +138,7 @@
 
  			<div class="see-more">
 	 			<h2> Want to see more?</h2>
-	 			<a href="#" class="github-button"> View on Github</a>
+	 			<a href="https://github.com/jrogers97" class="github-button"> View on Github</a>
  			</div>
 	 	</div>
 
@@ -160,6 +172,16 @@
 	 	<div class="music">
 	 		<h1 class="music-header">Do you like music?</h1>
 	 		<div class="yes-button">Yes!</div>
+	 		<div class="music-expand hidden">
+	 			<div class="music-expand-content hidden">
+		 			<p class="music-writeup-1">I am also a musician. I play guitar, bass, and drums, and have experience with audio engineering and recording. </p>
+		 			<p class="music-writeup-2">Feel free to check out some of my music!</p>
+		 			<div class="music-buttons">
+			 			<a href="https://soundcloud.com/sneakyboyohboy/sets/slump" class="soundcloud-button"> SoundCloud </a>
+			 			<a href="https://megmakesmoney.bandcamp.com/releases" class="bandcamp-button"> Bandcamp </a> 
+			 		</div>
+		 		</div>
+	 		</div>
 	 	</div>
 
 	<!-- Footer -->
@@ -167,8 +189,12 @@
 	 		<p> Handmade by me &copy; 2018.</p>
 
 	 		<div class="footer-links">
-		 		<div class="linkedin-link"> </div>
-		 		<div class="github-link"></div>
+		 		<a href="https://www.linkedin.com/in/jacob-rogers-0495b7133/" class="linkedin-link"> 
+		 			<img src="./icons/linkedin.svg" />
+		 		</a>
+		 		<a href="https://github.com/jrogers97" class="github-link">
+		 			<img src="./icons/github.svg" />
+		 		</a>
 	 		</div>
 	 	</div>
 	 </div>
